--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass scss/style.scss css/style.css"
+    "sass": "sass -w scss/style.scss css/style.css"
   },
   "keywords": [],
   "author": "",
